# generic_filter_api

./: .gitignore  GENERIC_FILTERING_SYSTEM_GUIDE.md  README.md  RUNNING_GUIDE.md  alembic.ini  filterx.yaml  main.py  pyproject.toml  seed_data.py
.filterx/: diagnostics.json  manifest.json  plan.json  (+1 more)
tools/filterx/: README.md  pyproject.toml
tools/filterx/filterx/: cli.py
tools/filterx/filterx/commands/: _stub.py  backend.py  db.py  frontend.py  install.py  rollback.py  scan.py  validate.py
tools/filterx/filterx/core/: config.py  conflicts.py  io.py  manifest.py  patcher.py  render.py  scanner.py  schema.py
tools/filterx/filterx/reference_runtime/app/core/: index.ts
tools/filterx/filterx/reference_runtime/app/core/enums/: filter-operation.enum.ts  index.ts  sort-order.enum.ts
tools/filterx/filterx/reference_runtime/app/core/interfaces/: entity-config.interface.ts  filter-tree.interface.ts  filter.interface.ts  index.ts  pagination.interface.ts  query-state.interface.ts  saved-filter.interface.ts
tools/filterx/filterx/reference_runtime/app/core/services/: entity-query.service.ts  generic-query.service.ts
tools/filterx/filterx/reference_runtime/app/shared/components/advanced-search-panel/: advanced-search-panel.component.ts
tools/filterx/filterx/reference_runtime/app/shared/components/data-table/: data-table.component.scss
tools/filterx/filterx/reference_runtime/app/shared/components/entity-list/: entity-list.component.ts
tools/filterx/tests/: test_backend_install.py  test_cli_workflow.py  test_db_install.py  test_frontend_install.py  test_patcher.py
(+126 files in other folders)
